--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
     </style>
 
     <style name="GlobalCometViewStyle">
-        <item name="cometColor">#878787</item>
+        <item name="cometColor">#EAB9B9</item>
     </style>
 
 </resources>
